--- a/client/main.html
+++ b/client/main.html
@@ -1,9 +1,9 @@
 <head>
   <title>Notes</title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-  <link rel="icon" sizes="16x16 32x32" href="/client/icons/favicon.png">
+  <link rel="icon" type="image/png" sizes="16x16 32x32" href="/client/icons/favicon.png">
 </head>
 
 <body>
